tests/baselines/reference/internalAliasFunctionInsideTopLevelModuleWithoutExport.errors.txt
internalAliasFunctionInsideTopLevelModuleWithoutExport.ts(1,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== internalAliasFunctionInsideTopLevelModuleWithoutExport.ts (1 errors) ====
    export module a {
                  ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export function foo(x: number) {
            return x;
        }
    }
    
    import b = a.foo;
    export var bVal = b(10);
    export var bVal2 = b;
    